force-app/main/default/objects/Vehicle__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brand</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>