force-app/main/default/objects/Vehicle__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <inlineHelpText>Car load capacity</inlineHelpText>
    <label>Capacity (kg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>