force-app/main/default/objects/Vehicle__c/fields/Fuel_consumption__c.field-meta.xml
<CustomField>
    <fullName>Fuel_consumption__c</fullName>
    <inlineHelpText>Average fuel consumption</inlineHelpText>
    <label>Fuel consumption(per 100km)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>