force-app/main/default/objects/Vehicle__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <inlineHelpText>Engine power</inlineHelpText>
    <label>Power</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>