force-app/main/default/objects/Vehicle__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>Cena pojazdu</inlineHelpText>
    <label>Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>