force-app/main/default/objects/Vehicle__c/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A showroom where the vehicle is physically available.</description>
    <label>Showroom</label>
    <referenceTo>Showroom__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>