force-app/main/default/objects/Vehicle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Type of car</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sportowe</fullName>
            </value>
            <value>
                <fullName>Rodzinne</fullName>
            </value>
            <value>
                <fullName>Dostawcze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>