force-app/main/default/objects/Vehicle__c/validationRules/Production_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_Year</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(TEXT( Production_Year__c ) )  &lt;&gt; 4</errorConditionFormula>
    <errorDisplayField>Production_Year__c</errorDisplayField>
    <errorMessage>Production year is incorrect!</errorMessage>
</ValidationRule>