force-app/main/default/objects/Vehicle__c/validationRules/Value_of_price.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_of_price</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price must be greater than 0!</errorMessage>
</ValidationRule>