force-app/main/default/objects/Vehicle__c/listViews/Audi.listView-meta.xml
<ListView>
    <fullName>Audi</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brands__c</field>
        <operation>equals</operation>
        <value>Audi</value>
    </filters>
    <label>Audi</label>
</ListView>