force-app/main/default/objects/Vehicle__c/listViews/Citroen.listView-meta.xml
<ListView>
    <fullName>Citroen</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brands__c</field>
        <operation>equals</operation>
        <value>Citroen</value>
    </filters>
    <label>Citroen</label>
</ListView>