force-app/main/default/objects/Vehicle__c/listViews/Toyota.listView-meta.xml
<ListView>
    <fullName>Toyota</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brands__c</field>
        <operation>equals</operation>
        <value>Toyota</value>
    </filters>
    <label>Toyota</label>
</ListView>